--- a/AI_VoiceInteractionModule/platformio.ini
+++ b/AI_VoiceInteractionModule/platformio.ini
@@ -67,8 +67,8 @@ build_flags =
   -DBOARD_HAS_PSRAM
   -DCORE_DEBUG_LEVEL=0      ; 0 None, 1 Error, 2 Warn, 3 Info, 4 Debug, 5 Verbose
   -DSTATUS_LED_PIN=21
-  -DVIC_RX_PIN=5
-  -DVIC_TX_PIN=6
+  -DVIM_RX_PIN=5
+  -DVIM_TX_PIN=6
   -DMULTI_COLOR_LED
 
 monitor_speed = 115200
